# poker-ai

./: .gitignore  LICENSE  best_model.h5  best_target_model.h5  pyproject.toml
poker_ai/: __main__.py
poker_ai/agents/: dqn_agent.py
trained_models/: best_model.h5  best_target_model.h5
