[tool.poetry]
name = "poker-ai"
version = "0.1.0"
description = ""
authors = ["Jan Adä"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
gym-holdem = "^0.1.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "pypi_test"
url = "https://test.pypi.org/simple/"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

