[tool.poetry]
name = "poker-ai"
version = "0.1.0"
description = ""
authors = ["Jan Adä"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
keras = "^2.2"
tensorflow = "^1.13"
gym-holdem = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

